--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "bad-words": "^3.0.4",
+    "chart.js": "^3.4.1",
     "next": "10.x",
     "planetscale-node": "^0.0.2",
     "react": "17.x",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "17.x",
     "swr": "^0.5.6"
   },
