--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.3",
     "chart.js": "^3.4.1",
+    "classnames": "^2.3.1",
     "next": "10.x",
     "planetscale-node": "^0.0.2",
     "react": "17.x",
