--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^1.0.3",
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.23.0",
+    "md5": "^2.3.0",
     "next": "10.x",
     "planetscale-node": "^0.0.2",
     "react": "17.x",
