--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.23.0",
     "md5": "^2.3.0",
     "next": "10.x",
+    "next-auth": "^4.3.1",
     "planetscale-node": "^0.3.0",
     "react": "17.x",
     "react-chartjs-2": "^3.0.4",
