--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.3",
     "chart.js": "^3.4.1",
+    "chartjs-plugin-zoom": "^1.2.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "md5": "^2.3.0",
