--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.3",
-    "chart.js": "^3.4.1",
-    "chartjs-plugin-zoom": "^1.2.1",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-zoom": "^2.0.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "md5": "^2.3.0",
-    "next": "10.x",
+    "next": "^13.5.3",
     "next-auth": "^4.3.1",
     "planetscale-node": "^0.3.0",
-    "react": "17.x",
-    "react-chartjs-2": "^3.0.4",
-    "react-dom": "17.x",
-    "swr": "^0.5.6"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.1",
