--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.3",
+    "@vercel/speed-insights": "^1.0.1",
     "chart.js": "^4.4.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "classnames": "^2.3.1",
