--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@vercel/speed-insights": "^1.0.1",
     "chart.js": "^4.4.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.1",
+    "clsx": "^2.0.0",
     "date-fns": "^2.23.0",
+    "lucide-react": "^0.298.0",
     "md5": "^2.3.0",
     "next": "^13.5.3",
     "next-auth": "^4.3.1",
@@ -22,11 +26,11 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
     "autoprefixer": "^10.4.16",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.28.0",
