--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "md5": "^2.3.0",
+    "mysql2": "^3.10.2",
     "next": "^13.5.3",
     "next-auth": "^4.3.1",
-    "planetscale-node": "^0.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
